# diagnostico-medico-api

./: .dockerignore  .env-example  .gitignore  CI_CD_GUIDE.md  DEPLOYMENT.md  Dockerfile  FILES_SUMMARY.md  Makefile  POSTHOG_DASHBOARDS.md  POSTHOG_QUICK_START.md  POSTHOG_SETUP.md  QUICK_START.md  README.md  SECRETS_MANUAL_SETUP.md  SETUP.md  TERRAFORM_CLOUD.md  TERRAFORM_CLOUD_QUICK.md  TESTES_DESABILITADOS.md  doc_tests.md  mocks.md  pcos_logistic_regression_top20.ipynb  pyproject.toml
.github/workflows/: pipeline.yml
.mimocode/plans/: 1782422836832-jolly-circuit.md
examples/: posthog_integration_example.py
models/: pcos_model.joblib
scripts/: entrypoint.sh  train_model.py  validate_notebook_vs_api.py
src/app/: main.py
src/app/api/: deps.py
src/app/api/v1/: router.py
src/app/api/v1/analysis/: router.py  schemas.py
src/app/api/v1/explain/: router.py  schemas.py
src/app/api/v1/optimize/: router.py  schemas.py
src/app/api/v1/predict/: router.py  schemas.py
src/app/api/v1/ultrasound/: router.py  schemas.py
src/app/core/: config.py  dependencies.py  exceptions.py  logger.py
src/app/domain/: enums.py  exceptions.py  features.py  models.py
src/app/infrastructure/: llm_client.py  model_registry.py  secrets_manager.py
src/app/infrastructure/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  groq_provider.py  harness.py  ollama_provider.py  openai_provider.py
src/app/monitoring/: metrics.py  middleware.py  posthog.py
src/app/services/: genetic_optimizer.py  llm_explainer.py  predictor.py
src/minha_api/: __init__.py  config.py  main.py  schemas.py
src/minha_api/models/: pcos_classifier.py
src/minha_api/services/: interpreter.py
src/minha_api/services/llm/: anthropic_provider.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
terraform/: alb.tf  autoscaling.tf  deployment-trigger.tf  ecr.tf  ecs.tf  github-actions.tf  main.tf  outputs.tf  terraform.dev.tfvars  terraform.prod.tfvars  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/scripts/: restore-import-secrets.sh
tests/: conftest.py  test_classifier.py  test_interpreter.py  test_main.py  test_pipeline_parity.py
tests/api/: test_analysis_api.py  test_explain_api.py  test_optimize_api.py  test_predict_api.py  test_ultrasound_api.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_config.py  test_core_exceptions.py  test_domain_enums.py  test_domain_exceptions.py  test_domain_models.py  test_explainer.py  test_genetic_operators.py  test_genetic_optimizer.py  test_groq_provider.py  test_llm_client.py  test_llm_explainer.py  test_llm_factory.py  test_llm_harness.py  test_llm_providers.py  test_logger.py  test_model_registry.py  test_predictor.py  test_timing_middleware.py
