[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagnostico-medico-api"
version = "0.2.0"
description = "API de Diagnóstico Médico — SOP com interpretação por LLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.0",
    # ML / Model serving
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "shap>=0.45",
    "joblib>=1.3",
    # LLM providers
    "openai>=1.30",
    "anthropic>=0.28",
    "google-genai>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
training = [
    "openpyxl>=3.1",
    "kagglehub>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
