[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagnostico-medico-api"

version = "1.0.0"
description = "PCOS Diagnosis API - Medical diagnostic system with ML models and LLM integration"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "starlette>=0.40",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "shap>=0.45",
    "joblib>=1.3",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "structlog>=24.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "Pillow>=10.0",
    "anyio>=4.0",
    # LLM providers
    "openai>=1.30",
    "anthropic>=0.28",
    "google-genai>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
training = [
    "openpyxl>=3.1",
    "kagglehub>=0.2",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Scripts de treino/validação: linhas longas em mensagens e pipelines tabulares.
"scripts/*.py" = ["E501"]
